--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,129 @@
+:root{
+    background-color: rgb(198, 89, 49) ;
 
+}
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding:0;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    font-size: 30px;
+    color:#9fc184;
+    margin-bottom: 5rem;
+}
+h2{
+    font-size: 4.2rem;
+    margin-bottom:4rem ;
+}
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+.flex-center{
+    justify-content: center;
+    align-items: center;
+
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.hidden{
+    display: none;
+}
+
+.btn{
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom:1rem;
+    text-decoration: none;
+    color:#9fc184;
+    background: #143c73;
+    border-radius: 4px;
+}
+
+.btn:hover{
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 #1e60bc ;
+    transition: transform 150ms;
+    transform: scale(1.03);
+
+}
+
+.btn[disabled]:hover{
+    cursor:not-allowed;
+    box-shadow: none;
+    transform: none;
+}
+
+#highscore-btn{
+    background:black ;
+}
+
+#highscore-btn:hover{
+    box-shadow: 0 0.4rem 1.4rem 0 black;
+}
+
+
+/* End Style*/
+
+.end-form-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input{
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8em;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 black;
+}
+
+input::placeholder{
+    color:#aaa;
+
+
+}
+
+#username{
+    margin-bottom: 3rem;
+    width:100%;
+    outline: none;
+}
+
+#end-text{
+    font-size: 2.4rem;
+    color: #fff;
+    text-align: center;
+}
+
+#saveScorebtn{
+    border:none;
+}
