--- a/highscores.css
+++ b/highscores.css
@@ -1,5 +1,6 @@
 body{
-    color: blueviolet;
+    color:rgb(198, 89, 49);
+
 }
 
 #highScoreList{
@@ -7,7 +8,10 @@ body{
     margin-bottom: 4rem;
 }
 
-.highscore{
-    font-size: medium;
+.high-score{
+    font-size: 2.8rem;
     margin-bottom: 0.5rem;
+}
+#gohome-btn{
+    background: black;
 }
